tests/ui/structopt_empty_attr.stderr
error: unexpected end of input, expected parentheses
  --> $DIR/structopt_empty_attr.rs:11:10
   |
11 | #[derive(StructOpt, Debug)]
   |          ^^^^^^^^^
